[package]
name = "tin"
description = "Lightweight key-value database with an embedded Rocket REST API."
version = "0.1.0"
authors = ["PaoloRollo <paolo.rollo@cidaro.com>"]
repository = "https://github.com/CIDARO-srl/tin"
readme = "https://github.com/CIDARO-srl/tin/blob/master/README.md"
license = "https://github.com/CIDARO-srl/tin/blob/master/LICENSE.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
app_dirs = "1.2.1"
block-modes = "0.3.3"
bytes = "0.5.3"
chashmap = "2.2.2"
chrono = { version = "0.4.10", features = ["serde"] }
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
short-crypt = "1.0.15"
hex = "0.3.1"
rand = "0.7.3"
reqwest = "0.10.4"
rocket = "0.4.4"
rocket_contrib = "0.4.4"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
serde_yaml = "0.8.11"