[package]
name = "tin"
description = "Lightweight key-value database with an embedded Rocket REST API."
version = "0.1.0"
authors = ["PaoloRollo <paolo.rollo@cidaro.com>"]
repository = "https://github.com/CIDARO/tin"
readme = "https://github.com/CIDARO/tin/blob/master/README.md"
license = "https://github.com/CIDARO/tin/blob/master/LICENSE.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1.0.1"
chashmap = "2.2.2"
chrono = { version = "0.4.10", features = ["serde"] }
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
short-crypt = "1.0.15"
hex = "0.4.2"
rand = "0.7.3"
rocket = "0.4.4"
rocket_contrib = "0.4.4"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
serde_yaml = "0.8.11"